--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,8 @@
 
 :root {
   --bg-color-primary: #FEFEFE;
-  --bg-color-secondary: #F9F8F5;
-  --bg-color-accent: #E35F22;
+  --bg-color-secondary: #FFF1EE;
+  --bg-accent-gradient: linear-gradient(#E35F22 0%, #E92B07 100%);
 
   --text-color-primary: #2A2927;
   --text-color-secondary: #898989;
